force-app/main/default/objects/QuoteLineItem/fields/Is_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Is_Bundle__c</fullName>
    <formula>OpportunityLineItem.Is_Bundle_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Bundle</label>
    <type>Checkbox</type>
</CustomField>