force-app/main/default/objects/QuoteLineItem/fields/Service_Days__c.field-meta.xml
<CustomField>
    <fullName>Service_Days__c</fullName>
    <description>Inclusive number of calendar days between Service_Start_Date__c and Service_End_Date__c (end - start + 1). Zero when either date is blank.</description>
    <formula>IF(
    AND(NOT(ISBLANK(Service_Start_Date__c)), NOT(ISBLANK(Service_End_Date__c))),
    Service_End_Date__c - Service_Start_Date__c + 1,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>