force-app/main/default/objects/QuoteLineItem/fields/Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_End_Date__c</fullName>
    <description>End date of the service period for this Quote Line. Populated by QuoteLineItemTrigger from the parent OpportunityLineItem on standard Sync Quote.</description>
    <inlineHelpText>Service end date for this quote line.</inlineHelpText>
    <label>Service End Date</label>
    <type>Date</type>
</CustomField>