force-app/main/default/objects/QuoteLineItem/fields/Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Start_Date__c</fullName>
    <description>Start date of the service period for this Quote Line. Populated by QuoteLineItemTrigger from the parent OpportunityLineItem on standard Sync Quote.</description>
    <inlineHelpText>Service start date for this quote line.</inlineHelpText>
    <label>Service Start Date</label>
    <type>Date</type>
</CustomField>